Agent - fanuc iSeries/Fwlib/15i/Fwlib32.bas


' Start of writing operation data to drive of SERCOS I/F
Declare Function cnc_srcsstartwrt% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, ByVal b%)

' Stop of reading/writing operation data from/to drive of SERCOS I/F
Declare Function cnc_srcsstopexec% Lib "fwlib32.dll" (ByVal FlibHndl%)

' Get execution status of reading/writing operation data of SERCOS I/F
Declare Function cnc_srcsrdexstat% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSRCSST)

' Read operation data from data buffer for SERCOS I/F
Declare Function cnc_srcsrdopdata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, b&, Odb As Any)

' Write operation data to data buffer for SERCOS I/F
Declare Function cnc_srcswropdata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, ByVal b&, Idb As Any)

' Free reservation of service channel for SERCOS I/F
Declare Function cnc_srcsfreechnl% Lib "fwlib32.dll" (ByVal FlibHndl%)

' Read drive assign of SERCOS I/F
Declare Function cnc_srcsrdlayout% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSRCSLYT)

' Read communication phase of drive of SERCOS I/F
Declare Function cnc_srcsrddrvcp% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)


'---------------------------
' CNC : Graphic command data
'---------------------------

' Start drawing position
Declare Function cnc_startdrawpos% Lib "fwlib32.dll" (ByVal FlibHndl%)

' Stop drawing position
Declare Function cnc_stopdrawpos% Lib "fwlib32.dll" (ByVal FlibHndl%)

' Start dynamic graphic
Declare Function cnc_startdyngrph% Lib "fwlib32.dll" (ByVal FlibHndl%)

' Stop dynamic graphic
Declare Function cnc_stopdyngrph% Lib "fwlib32.dll" (ByVal FlibHndl%)

' Read graphic command data
Declare Function cnc_rdgrphcmd% Lib "fwlib32.dll" (ByVal FlibHndl%, a%, b%)

' Update graphic command read pointer
Declare Function cnc_wrgrphcmdptr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)
' Read cancel flag
Declare Function cnc_rdgrphcanflg% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' Clear graphic command
Declare Function cnc_clrgrphcmd% Lib "fwlib32.dll" (ByVal FlibHndl%)


'---------------------------
' CNC : NC display function
'---------------------------

' Start NC display
Declare Function cnc_startnccmd% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' Start NC display (2)
Declare Function cnc_startnccmd2% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' Stop NC display
Declare Function cnc_stopnccmd% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' Get NC display mode
Declare Function cnc_getdspmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )


'-----
' PMC
'-----

' read message from PMC to MMC
Declare Function pmc_rdmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, a%, b% )

' write message from MMC to PMC
Declare Function pmc_wrmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b% )

' read message from PMC to MMC(conditional)
Declare Function pmc_crdmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, a%, b% )

' write message from MMC to PMC(conditional)
Declare Function pmc_cwrmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b% )

' read PMC data(area specified)
Declare Function pmc_rdpmcrng% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, ByVal e&, Odb As Any )

' write PMC data(area specified)
Declare Function pmc_wrpmcrng% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, Idb As Any )

' read data from extended backup memory
Declare Function pmc_rdkpm% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, b as Byte, ByVal c& )

' write data to extended backup memory
Declare Function pmc_wrkpm% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, b as Byte, ByVal c& )

' read maximum size of extended backup memory
Declare Function pmc_kpmsiz% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read informations of PMC data
Declare Function pmc_rdpmcinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBPMCINF )

' read PMC parameter data table contorol data
Declare Function pmc_rdcntldata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBPMCCNTL )

' write PMC parameter data table contorol data
Declare Function pmc_wrcntldata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBPMCCNTL )

' read PMC parameter data table contorol data group number
Declare Function pmc_rdcntlgrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' write PMC parameter data table contorol data group number
Declare Function pmc_wrcntlgrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read PMC alarm message */
Declare Function pmc_rdalmmsg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, c%, Odb As Any)

' get detail error for pmc
Declare Function pmc_getdtailerr% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBPMCERR )

' read PMC memory data
Declare Function pmc_rdpmcmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b&, ByVal c&, Odb As Any )

' write PMC memory data
Declare Function pmc_wrpmcmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b&, ByVal c&, Idb As Any )


'----------------------------
' PMC : PROFIBUS function
'----------------------------

' read PROFIBUS configration data
Declare Function pmc_prfrdconfig% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBPRFCNF)

' read bus parameter for master function
Declare Function pmc_prfrdbusprm% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As IODBBUSPRM)

' write bus parameter for master function
Declare Function pmc_prfwrbusprm% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBBUSPRM)

' read slave parameter for master function
Declare Function pmc_prfrdslvprm% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As IODBSLVPRM)

' write slave parameter for master function
Declare Function pmc_prfwrslvprm% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBSLVPRM)

' read allocation address for master function
Declare Function pmc_prfrdallcadr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As IODBPRFADR)

' set allocation address for master function
Declare Function pmc_prfwrallcadr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBPRFADR)

' read allocation address for slave function
Declare Function pmc_prfrdslvaddr% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As IODBSLVADR)

' set allocation address for slave function
Declare Function pmc_prfwrslvaddr% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBSLVADR)

' read status for slave function
Declare Function pmc_prfrdslvstat% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSLVST)


